fixing spacing

--- a/click-game/src/components/Header/style.css
+++ b/click-game/src/components/Header/style.css
@@ -1,5 +1,5 @@
 header {
-    margin-top: 100px;
+    margin-top: 150px;
     padding: 0px 20px;
     text-align: center;
 }
