--- a/click-game/src/components/Nav/style.css
+++ b/click-game/src/components/Nav/style.css
@@ -12,6 +12,8 @@ ul {
     justify-content: space-around;
     padding-left: 0px;
     padding: 10px;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 li {
